css align vertical fix.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,7 @@ footer li {
 .main-item {
   display: inline-block;
   margin-right: 50px;
+  vertical-align: top;
 }
 
 .notice {
